--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: テストページ
-description: Bookmark this to keep an eye on my project updates!
+title: No Title
+description: いろいろ、書いていきます。(多分)
